--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="col-lg-8 col-md-10 mx-auto">
                         <div class="site-heading">
                             <h1>Brunch and Bikes</h1>
-                            <span class="subheading">Yeah, it's a stupid name for a website but I'm stuck with it now.</span>
+                            <span class="subheading">Yeah, it's a stupid name for a website but I'm stuck with it. For now.</span>
                         </div>
                     </div>
                 </div>
